--- a/mainapp/templates/mainapp/index.html
+++ b/mainapp/templates/mainapp/index.html
@@ -11,7 +11,31 @@
     <link rel="stylesheet" href="{% static 'mainapp/css/citydata.css' %}">
     
     <script src="{% static 'mainapp/js/echarts.js' %}"></script> 
+    <script type="text/javascript">
+    function divShow() {
+        document.getElementById("btnshow").style.display = "block";
+        document.getElementById("btnhref").innerHTML = "关闭";
+        document.getElementById("btnhref").href = "javascript:divhidden()";
+    }
 
+    function divhidden() {
+        document.getElementById("btnshow").style.display = "none";
+        document.getElementById("btnhref").innerHTML = "更多";
+        document.getElementById("btnhref").href = "javascript:divShow()";
+    }
+
+    function divShow_gzepb() {
+        document.getElementById("btnshow_gzepb").style.display = "block";
+        document.getElementById("btnhref_gzepb").innerHTML = "关闭";
+        document.getElementById("btnhref_gzepb").href = "javascript:divhidden_gzepb()";
+    }
+
+    function divhidden_gzepb() {
+        document.getElementById("btnshow_gzepb").style.display = "none";
+        document.getElementById("btnhref_gzepb").innerHTML = "更多";
+        document.getElementById("btnhref_gzepb").href = "javascript:divShow_gzepb()";
+    }
+    </script>
 </head>
 
 <body>
@@ -256,16 +280,9 @@
                       {% if lastest_aqicn_data %}
                         <div class="pj_area_data_title">
                             <span class="pjadt_location">美领馆监测站点</span>
-                            <!--AQI指数有上下箭头，可以选择排序,a标签分别增加“aqi_arrow_top”和“aqi_arrow_down”,默认是没有这个类名的-->
-                            <a class="pjadt_aqi aqi_arrow_top" href="javascript:void(0)" style="cursor:default;">
-                                <span>AQI</span>
-                            </a>
+                            <span class="pjadt_aqi">AQI</span>
                             <span class="pjadt_quality">空气质量状况</span>
                             <span class="pjadt_wuranwu">首要污染物</span>
-                            <!--
-                            <span class="pjadt_pm25">PM2.5浓度</span>
-                            <span class="pjadt_pm10">PM10浓度</span>
-                            -->
                             <span class="pjadt_pm25">PM2.5 IAQI</span>
                             <span class="pjadt_pm10">PM10 IAQI</span>
                             <div class="clear"></div>
@@ -273,10 +290,10 @@
                       {% endif %}
                         <ul class="pj_area_data_details ui-switchable-panel">
                             <!--鼠标划上去后，要有个li的背景变绿色效果，增加li的"pj_area_data_item_active"就行-->
-                            {% for station_data in lastest_aqicn_data %}
+                            {% for station_data in lastest_aqicn_data|slice:":5" %}
                               <li class="pj_area_data_item pj_area_data_item_darkbg">
                               <b></b>
-                              <a class="pjadt_location" href="{{ station_data.station_name.get_absolute_url }}" title="查看广雅中学详细数据">{{ station_data.station_name.display_name }}</a>
+                              <a class="pjadt_location" href="{{ station_data.station_name.get_absolute_url }}" title="查看详细数据" target="_blank">{{ station_data.station_name.display_name }}</a>
                                 <span class="pjadt_aqi">{{ station_data.aqi }}<i class=""></i></span>
 
                                 {% if station_data.quality.color == "绿色" %}
@@ -297,16 +314,46 @@
                                 <a class="pjadt_wuranwu" href="/news/387.html" title="颗粒物(PM10)" target="_blank">{{ station_data.dominentpol }}</a>
                                 <span class="pjadt_pm25">{{ station_data.pm25_iaqi }} <i class=""></i></span>
                                 <span class="pjadt_pm10">{{ station_data.pm10_iaqi }} <i class=""></i></span>
-                                <!--
-                                <span class="pjadt_pm25">{{ station_data.pm25_1h }} <em>μg/m³</em><i class=""></i></span>
-                                <span class="pjadt_pm10">{{ station_data.pm10_1h }} <em>μg/m³</em><i class=""></i></span>
-                                -->
                                 <div class="clear"></div>
                               </li>                             
                             {% endfor %}
+                          <div id="btnshow" style="display: none;">
+                            {% for station_data in lastest_aqicn_data|slice:"5:" %}
+                              <li class="pj_area_data_item pj_area_data_item_darkbg">
+                              <b></b>
+                              <a class="pjadt_location" href="{{ station_data.station_name.get_absolute_url }}" title="查看详细数据" target="_blank">{{ station_data.station_name.display_name }}</a>
+                                <span class="pjadt_aqi">{{ station_data.aqi }}<i class=""></i></span>
+
+                                {% if station_data.quality.color == "绿色" %}
+                                  <span class="pjadt_quality"><em class="pjadt_quality_bglevel_1">{{ station_data.quality.usa_quality }}</em></span>
+                                {% elif station_data.quality.color == "黄色" %}
+                                  <span class="pjadt_quality"><em class="pjadt_quality_bglevel_2">{{ station_data.quality.usa_quality }}</em></span>
+                                {% elif station_data.quality.color == "橘色" %}
+                                  <span class="pjadt_quality"><em class="pjadt_quality_bglevel_3">{{ station_data.quality.usa_quality }}</em></span>
+                                {% elif station_data.quality.color == "红色" %}
+                                  <span class="pjadt_quality"><em class="pjadt_quality_bglevel_4">{{ station_data.quality.usa_quality }}</em></span>
+                                {% elif station_data.quality.color == "紫色" %}
+                                  <span class="pjadt_quality"><em class="pjadt_quality_bglevel_5">{{ station_data.quality.usa_quality }}</em></span>
+                                {% elif station_data.quality.color == "枣红色" %}
+                                  <span class="pjadt_quality"><em class="pjadt_quality_bglevel_6">{{ station_data.quality.usa_quality }}</em></span>
+                                {% else %}
+                                  <span class="pjadt_quality"><em class="pjadt_quality_bglevel_6">{{ station_data.quality.usa_quality }}</em></span>
+                                {% endif %}
+                                <a class="pjadt_wuranwu" href="/news/387.html" title="颗粒物(PM10)" target="_blank">{{ station_data.dominentpol }}</a>
+                                <span class="pjadt_pm25">{{ station_data.pm25_iaqi }} <i class=""></i></span>
+                                <span class="pjadt_pm10">{{ station_data.pm10_iaqi }} <i class=""></i></span>
+                                <div class="clear"></div>
+                              </li>                             
+                            {% endfor %}
+                          </div>
                         </ul>
                     </div>
-                    <!-- gzepb  -->
+                    <div class="bottom_more">
+                        <p class="slide">
+                            <a href="javascript:divShow();" id="btnhref" class="btn-slide">更多</a>
+                        </p> 
+                    </div>
+                    <div class="clear"></div>
                     <div class="pj_area_data ui-switchable-content">
                       {% if lastest_aqicn_data %}
                         <div class="pj_area_data_title">
@@ -317,20 +364,16 @@
                             </a>
                             <span class="pjadt_quality">空气质量状况</span>
                             <span class="pjadt_wuranwu">首要污染物</span>
-                            <!--
-                            <span class="pjadt_pm25">PM2.5浓度</span>
-                            <span class="pjadt_pm10">PM10浓度</span>
-                            -->
                             <span class="pjadt_pm25">PM2.5 IAQI</span>
                             <span class="pjadt_pm10">PM10 IAQI</span>
                             <div class="clear"></div>
                         </div>
                       {% endif %}
                         <ul class="pj_area_data_details ui-switchable-panel">
-                            {% for station_data in lastest_gzepb_data %}
+                            {% for station_data in lastest_gzepb_data|slice:":5" %}
                               <li class="pj_area_data_item pj_area_data_item_darkbg">
                               <b></b>
-                              <a class="pjadt_location" href="{{ station_data.station_name.get_absolute_url }}" title="查看广雅中学详细数据">{{ station_data.station_name.display_name }}</a>
+                              <a class="pjadt_location" href="{{ station_data.station_name.get_absolute_url }}" title="查看详细数据" target="_blank">{{ station_data.station_name.display_name }}</a>
                                 <span class="pjadt_aqi">{{ station_data.aqi }}<i class=""></i></span>
 
                                 {% if station_data.quality.color == "绿色" %}
@@ -355,8 +398,44 @@
                                 <div class="clear"></div>
                               </li>                             
                             {% endfor %}
+                          <div id="btnshow_gzepb" style="display: none;">
+                            {% for station_data in lastest_gzepb_data|slice:"5:" %}
+                              <li class="pj_area_data_item pj_area_data_item_darkbg">
+                              <b></b>
+                              <a class="pjadt_location" href="{{ station_data.station_name.get_absolute_url }}" title="查看详细数据" target="_blank">{{ station_data.station_name.display_name }}</a>
+                                <span class="pjadt_aqi">{{ station_data.aqi }}<i class=""></i></span>
+
+                                {% if station_data.quality.color == "绿色" %}
+                                  <span class="pjadt_quality"><em class="pjadt_quality_bglevel_1">{{ station_data.quality.china_quality }}</em></span>
+                                {% elif station_data.quality.color == "黄色" %}
+                                  <span class="pjadt_quality"><em class="pjadt_quality_bglevel_2">{{ station_data.quality.china_quality }}</em></span>
+                                {% elif station_data.quality.color == "橘色" %}
+                                  <span class="pjadt_quality"><em class="pjadt_quality_bglevel_3">{{ station_data.quality.china_quality }}</em></span>
+                                {% elif station_data.quality.color == "红色" %}
+                                  <span class="pjadt_quality"><em class="pjadt_quality_bglevel_4">{{ station_data.quality.china_quality }}</em></span>
+                                {% elif station_data.quality.color == "紫色" %}
+                                  <span class="pjadt_quality"><em class="pjadt_quality_bglevel_5">{{ station_data.quality.china_quality }}</em></span>
+                                {% elif station_data.quality.color == "枣红色" %}
+                                  <span class="pjadt_quality"><em class="pjadt_quality_bglevel_6">{{ station_data.quality.china_quality }}</em></span>
+                                {% else %}
+                                  <span class="pjadt_quality"><em class="pjadt_quality_bglevel_6">{{ station_data.quality.china_quality }}</em></span>
+                                {% endif %}
+
+                                <a class="pjadt_wuranwu" href="/news/387.html" title="颗粒物(PM10)" target="_blank">{{ station_data.dominentpol }}</a>
+                                <span class="pjadt_pm25">{{ station_data.pm25_iaqi }} <i class=""></i></span>
+                                <span class="pjadt_pm10">{{ station_data.pm10_iaqi }} <i class=""></i></span>
+                                <div class="clear"></div>
+                              </li>                             
+                            {% endfor %}
+                          </div>
                         </ul>
                     </div>
+                    <div class="bottom_more">
+                        <p class="slide">
+                            <a href="javascript:divShow_gzepb();" id="btnhref_gzepb" class="btn-slide">更多</a>
+                        </p> 
+                    </div>
+                    <div class="clear"></div>
                 </div>
             </div>
             <!-- 曲线图 -->
