删除中国标准选项

--- a/mainapp/templates/mainapp/station_base.html
+++ b/mainapp/templates/mainapp/station_base.html
@@ -59,15 +59,12 @@
           <p class="pg_title">{{ display_name }}</p>
           <div class="pj_area ui-switchable" data-widget-cid="widget-1">
             <div class="pj_area_tab ui-switchable-nav">
-              <a class="tab_caqi current ui-switchable-trigger" href="javascript:void(0)">中国标准<i></i></a>
+              <!--<a class="tab_caqi current ui-switchable-trigger" href="javascript:void(0)">中国标准<i></i></a>-->
               <!--
               <a class="tab_maqi ui-switchable-trigger" href="javascript:void(0)">美国标准<i></i></a>
               -->
               <div class="clear"></div>
             </div>
-            <p class="pj_area_links">
-              <a href="/news/96.html" target="_blank">查看中美标准差异&gt;&gt;</a>
-            </p>
             
             <!-- 数据列表 -->
             {% block content %}{% endblock %}
