--- a/mainapp/templates/mainapp/station.html
+++ b/mainapp/templates/mainapp/station.html
@@ -465,7 +465,22 @@
           <b></b>
           <a class="pjadt_location" href="http://aqicn.org/city/guangzhou/cn/" title="数据源" target="_blank">美国领事馆数据</a>
           <span class="pjadt_aqi">{{ aqicn_lastest_data.aqi }}<i class=""></i></span>
-          <span class="pjadt_quality"><em class="pjadt_quality_bglevel_1">{{ aqicn_lastest_data.quality.usa_quality }}</em></span>
+          <!--<span class="pjadt_quality"><em class="pjadt_quality_bglevel_1">{{ aqicn_lastest_data.quality.usa_quality }}</em></span>-->
+          {% if aqicn_lastest_data.quality.color == "绿色" %}
+            <span class="pjadt_quality"><em class="pjadt_quality_bglevel_1">{{ aqicn_lastest_data.quality.usa_quality }}</em></span>
+          {% elif aqicn_lastest_data.quality.color == "黄色" %}
+            <span class="pjadt_quality"><em class="pjadt_quality_bglevel_2">{{ aqicn_lastest_data.quality.usa_quality }}</em></span>
+          {% elif aqicn_lastest_data.quality.color == "橘色" %}
+            <span class="pjadt_quality"><em class="pjadt_quality_bglevel_3">{{ aqicn_lastest_data.quality.usa_quality }}</em></span>
+          {% elif aqicn_lastest_data.quality.color == "红色" %}
+            <span class="pjadt_quality"><em class="pjadt_quality_bglevel_4">{{ aqicn_lastest_data.quality.usa_quality }}</em></span>
+          {% elif aqicn_lastest_data.quality.color == "紫色" %}
+            <span class="pjadt_quality"><em class="pjadt_quality_bglevel_5">{{ aqicn_lastest_data.quality.usa_quality }}</em></span>
+          {% elif aqicn_lastest_data.quality.color == "枣红色" %}
+            <span class="pjadt_quality"><em class="pjadt_quality_bglevel_6">{{ aqicn_lastest_data.quality.usa_quality }}</em></span>
+          {% else %}
+            <span class="pjadt_quality"><em class="pjadt_quality_bglevel_6">{{ aqicn_lastest_data.quality.usa_quality }}</em></span>
+          {% endif %}
           <span class="pjadt_wuranwu">{{ aqicn_lastest_data.dominentpol }}</span>
           <span class="pjadt_pm25">{{ aqicn_lastest_data.pm25_iaqi }} <i class=""></i></span>
           <span class="pjadt_pm10">{{ aqicn_lastest_data.pm10_iaqi }} <i class=""></i></span>
@@ -481,7 +496,22 @@
           <b></b>
           <a class="pjadt_location" href="http://www.gzepb.gov.cn/aqi/" title="数据源" target="_blank">空气质量发布中心数据</a>
           <span class="pjadt_aqi">{{ gzepb_lastest_data.aqi }}<i class=""></i></span>
-          <span class="pjadt_quality"><em class="pjadt_quality_bglevel_1">{{ gzepb_lastest_data.quality.usa_quality }}</em></span>
+          <!--<span class="pjadt_quality"><em class="pjadt_quality_bglevel_1">{{ gzepb_lastest_data.quality.china_quality }}</em></span>-->
+          {% if gzepb_lastest_data.quality.color == "绿色" %}
+            <span class="pjadt_quality"><em class="pjadt_quality_bglevel_1">{{ gzepb_lastest_data.quality.china_quality }}</em></span>
+          {% elif gzepb_lastest_data.quality.color == "黄色" %}
+            <span class="pjadt_quality"><em class="pjadt_quality_bglevel_2">{{ gzepb_lastest_data.quality.china_quality }}</em></span>
+          {% elif gzepb_lastest_data.quality.color == "橘色" %}
+            <span class="pjadt_quality"><em class="pjadt_quality_bglevel_3">{{ gzepb_lastest_data.quality.china_quality }}</em></span>
+          {% elif gzepb_lastest_data.quality.color == "红色" %}
+            <span class="pjadt_quality"><em class="pjadt_quality_bglevel_4">{{ gzepb_lastest_data.quality.china_quality }}</em></span>
+          {% elif gzepb_lastest_data.quality.color == "紫色" %}
+            <span class="pjadt_quality"><em class="pjadt_quality_bglevel_5">{{ gzepb_lastest_data.quality.china_quality }}</em></span>
+          {% elif gzepb_lastest_data.quality.color == "枣红色" %}
+            <span class="pjadt_quality"><em class="pjadt_quality_bglevel_6">{{ gzepb_lastest_data.quality.china_quality }}</em></span>
+          {% else %}
+            <span class="pjadt_quality"><em class="pjadt_quality_bglevel_6">{{ gzepb_lastest_data.quality.china_quality }}</em></span>
+          {% endif %}
           <span class="pjadt_wuranwu">{{ gzepb_lastest_data.dominentpol }}</span>
           <span class="pjadt_pm25">{{ gzepb_lastest_data.pm25_iaqi }} <i class=""></i></span>
           <span class="pjadt_pm10">{{ gzepb_lastest_data.pm10_iaqi }} <i class=""></i></span>
@@ -497,7 +527,22 @@
           <b></b>
           <a class="pjadt_location" href="http://www.gzepb.gov.cn/aqi/" title="数据源" target="_blank">空气质量发布中心(美标)</a>
           <span class="pjadt_aqi">{{ gzepb_lastest_data_usa_standard.aqi }}<i class=""></i></span>
-          <span class="pjadt_quality"><em class="pjadt_quality_bglevel_1">{{ gzepb_lastest_data_usa_standard.quality.usa_quality }}</em></span>
+          <!--<span class="pjadt_quality"><em class="pjadt_quality_bglevel_1">{{ gzepb_lastest_data_usa_standard.quality.usa_quality }}</em></span>-->
+          {% if gzepb_lastest_data_usa_standard.quality.color == "绿色" %}
+            <span class="pjadt_quality"><em class="pjadt_quality_bglevel_1">{{ gzepb_lastest_data_usa_standard.quality.usa_quality }}</em></span>
+          {% elif gzepb_lastest_data_usa_standard.quality.color == "黄色" %}
+            <span class="pjadt_quality"><em class="pjadt_quality_bglevel_2">{{ gzepb_lastest_data_usa_standard.quality.usa_quality }}</em></span>
+          {% elif gzepb_lastest_data_usa_standard.quality.color == "橘色" %}
+            <span class="pjadt_quality"><em class="pjadt_quality_bglevel_3">{{ gzepb_lastest_data_usa_standard.quality.usa_quality }}</em></span>
+          {% elif gzepb_lastest_data_usa_standard.quality.color == "红色" %}
+            <span class="pjadt_quality"><em class="pjadt_quality_bglevel_4">{{ gzepb_lastest_data_usa_standard.quality.usa_quality }}</em></span>
+          {% elif gzepb_lastest_data_usa_standard.quality.color == "紫色" %}
+            <span class="pjadt_quality"><em class="pjadt_quality_bglevel_5">{{ gzepb_lastest_data_usa_standard.quality.usa_quality }}</em></span>
+          {% elif gzepb_lastest_data_usa_standard.quality.color == "枣红色" %}
+            <span class="pjadt_quality"><em class="pjadt_quality_bglevel_6">{{ gzepb_lastest_data_usa_standard.quality.usa_quality }}</em></span>
+          {% else %}
+            <span class="pjadt_quality"><em class="pjadt_quality_bglevel_6">{{ gzepb_lastest_data_usa_standard.quality.usa_quality }}</em></span>
+          {% endif %}
           <span class="pjadt_wuranwu">{{ gzepb_lastest_data_usa_standard.dominentpol }}</span>
           <span class="pjadt_pm25">{{ gzepb_lastest_data_usa_standard.pm25_iaqi }} <i class=""></i></span>
           <span class="pjadt_pm10">{{ gzepb_lastest_data_usa_standard.pm10_iaqi }} <i class=""></i></span>
@@ -529,13 +574,28 @@
         <span class="pjadt_o3">O3 IAQI</span>
         <div class="clear"></div>
       </div>
+      {% if aqicn_lastest_data %}
       <ul class="pj_area_data_details station">
         <li class="pj_area_data_item pj_area_data_item_darkbg">
           <b></b>
-          {% if aqicn_lastest_data %}
             <a class="pjadt_location" href="http://aqicn.org/city/guangzhou/cn/" title="数据源" target="_blank">美国领事馆数据</a>
             <span class="pjadt_aqi">{{ aqicn_lastest_data.aqi }}<i class=""></i></span>
+            <!--<span class="pjadt_quality"><em class="pjadt_quality_bglevel_1">{{ aqicn_lastest_data.quality.usa_quality }}</em></span>-->
+          {% if aqicn_lastest_data.quality.color == "绿色" %}
             <span class="pjadt_quality"><em class="pjadt_quality_bglevel_1">{{ aqicn_lastest_data.quality.usa_quality }}</em></span>
+          {% elif aqicn_lastest_data.quality.color == "黄色" %}
+            <span class="pjadt_quality"><em class="pjadt_quality_bglevel_2">{{ aqicn_lastest_data.quality.usa_quality }}</em></span>
+          {% elif aqicn_lastest_data.quality.color == "橘色" %}
+            <span class="pjadt_quality"><em class="pjadt_quality_bglevel_3">{{ aqicn_lastest_data.quality.usa_quality }}</em></span>
+          {% elif aqicn_lastest_data.quality.color == "红色" %}
+            <span class="pjadt_quality"><em class="pjadt_quality_bglevel_4">{{ aqicn_lastest_data.quality.usa_quality }}</em></span>
+          {% elif aqicn_lastest_data.quality.color == "紫色" %}
+            <span class="pjadt_quality"><em class="pjadt_quality_bglevel_5">{{ aqicn_lastest_data.quality.usa_quality }}</em></span>
+          {% elif aqicn_lastest_data.quality.color == "枣红色" %}
+            <span class="pjadt_quality"><em class="pjadt_quality_bglevel_6">{{ aqicn_lastest_data.quality.usa_quality }}</em></span>
+          {% else %}
+            <span class="pjadt_quality"><em class="pjadt_quality_bglevel_6">{{ aqicn_lastest_data.quality.usa_quality }}</em></span>
+          {% endif %}
             <span class="pjadt_wuranwu">{{ aqicn_lastest_data.dominentpol }}</span>
             <span class="pjadt_pm25">{{ aqicn_lastest_data.pm25_iaqi }} <i class=""></i></span>
             <span class="pjadt_pm10">{{ aqicn_lastest_data.pm10_iaqi }} <i class=""></i></span>
@@ -544,10 +604,30 @@
             <span class="pjadt_co">{{ aqicn_lastest_data.co_iaqi }} <i class=""></i></span>
             <span class="pjadt_o3">{{ aqicn_lastest_data.o3_iaqi }} <i class=""></i></span>
             <div class="clear"></div>
-          {% elif gzepb_lastest_data %}
+        </li>                             
+      </ul>
+      {% elif gzepb_lastest_data %}
+      <ul class="pj_area_data_details station">
+        <li class="pj_area_data_item pj_area_data_item_darkbg">
+          <b></b>
             <a class="pjadt_location" href="http://www.gzepb.gov.cn/aqi/" title="数据源" target="_blank">空气质量发布中心数据</a>
             <span class="pjadt_aqi">{{ gzepb_lastest_data.aqi }}<i class=""></i></span>
-            <span class="pjadt_quality"><em class="pjadt_quality_bglevel_1">{{ gzepb_lastest_data.quality.usa_quality }}</em></span>
+            <!--<span class="pjadt_quality"><em class="pjadt_quality_bglevel_1">{{ gzepb_lastest_data.quality.china_quality }}</em></span>-->
+          {% if gzepb_lastest_data.quality.color == "绿色" %}
+            <span class="pjadt_quality"><em class="pjadt_quality_bglevel_1">{{ gzepb_lastest_data.quality.china_quality }}</em></span>
+          {% elif gzepb_lastest_data.quality.color == "黄色" %}
+            <span class="pjadt_quality"><em class="pjadt_quality_bglevel_2">{{ gzepb_lastest_data.quality.china_quality }}</em></span>
+          {% elif gzepb_lastest_data.quality.color == "橘色" %}
+            <span class="pjadt_quality"><em class="pjadt_quality_bglevel_3">{{ gzepb_lastest_data.quality.china_quality }}</em></span>
+          {% elif gzepb_lastest_data.quality.color == "红色" %}
+            <span class="pjadt_quality"><em class="pjadt_quality_bglevel_4">{{ gzepb_lastest_data.quality.china_quality }}</em></span>
+          {% elif gzepb_lastest_data.quality.color == "紫色" %}
+            <span class="pjadt_quality"><em class="pjadt_quality_bglevel_5">{{ gzepb_lastest_data.quality.china_quality }}</em></span>
+          {% elif gzepb_lastest_data.quality.color == "枣红色" %}
+            <span class="pjadt_quality"><em class="pjadt_quality_bglevel_6">{{ gzepb_lastest_data.quality.china_quality }}</em></span>
+          {% else %}
+            <span class="pjadt_quality"><em class="pjadt_quality_bglevel_6">{{ gzepb_lastest_data.quality.china_quality }}</em></span>
+          {% endif %}
             <span class="pjadt_wuranwu">{{ gzepb_lastest_data.dominentpol }}</span>
             <span class="pjadt_pm25">{{ gzepb_lastest_data.pm25_iaqi }} <i class=""></i></span>
             <span class="pjadt_pm10">{{ gzepb_lastest_data.pm10_iaqi }} <i class=""></i></span>
@@ -556,10 +636,30 @@
             <span class="pjadt_co">{{ gzepb_lastest_data.co_iaqi }} <i class=""></i></span>
             <span class="pjadt_o3">{{ gzepb_lastest_data.o3_iaqi }} <i class=""></i></span>
             <div class="clear"></div>
+        </li>                             
+      </ul>
             
+      <ul class="pj_area_data_details station">
+        <li class="pj_area_data_item pj_area_data_item_darkbg">
+          <b></b>
             <a class="pjadt_location" href="http://www.gzepb.gov.cn/aqi/" title="数据源" target="_blank">空气质量发布中心(美标)</a>
             <span class="pjadt_aqi">{{ gzepb_lastest_data_usa_standard.aqi }}<i class=""></i></span>
+            <!--<span class="pjadt_quality"><em class="pjadt_quality_bglevel_1">{{ gzepb_lastest_data_usa_standard.quality.usa_quality }}</em></span>-->
+          {% if gzepb_lastest_data_usa_standard.quality.color == "绿色" %}
             <span class="pjadt_quality"><em class="pjadt_quality_bglevel_1">{{ gzepb_lastest_data_usa_standard.quality.usa_quality }}</em></span>
+          {% elif gzepb_lastest_data_usa_standard.quality.color == "黄色" %}
+            <span class="pjadt_quality"><em class="pjadt_quality_bglevel_2">{{ gzepb_lastest_data_usa_standard.quality.usa_quality }}</em></span>
+          {% elif gzepb_lastest_data_usa_standard.quality.color == "橘色" %}
+            <span class="pjadt_quality"><em class="pjadt_quality_bglevel_3">{{ gzepb_lastest_data_usa_standard.quality.usa_quality }}</em></span>
+          {% elif gzepb_lastest_data_usa_standard.quality.color == "红色" %}
+            <span class="pjadt_quality"><em class="pjadt_quality_bglevel_4">{{ gzepb_lastest_data_usa_standard.quality.usa_quality }}</em></span>
+          {% elif gzepb_lastest_data_usa_standard.quality.color == "紫色" %}
+            <span class="pjadt_quality"><em class="pjadt_quality_bglevel_5">{{ gzepb_lastest_data_usa_standard.quality.usa_quality }}</em></span>
+          {% elif gzepb_lastest_data_usa_standard.quality.color == "枣红色" %}
+            <span class="pjadt_quality"><em class="pjadt_quality_bglevel_6">{{ gzepb_lastest_data_usa_standard.quality.usa_quality }}</em></span>
+          {% else %}
+            <span class="pjadt_quality"><em class="pjadt_quality_bglevel_6">{{ gzepb_lastest_data_usa_standard.quality.usa_quality }}</em></span>
+          {% endif %}
             <span class="pjadt_wuranwu">{{ gzepb_lastest_data_usa_standard.dominentpol }}</span>
             <span class="pjadt_pm25">{{ gzepb_lastest_data_usa_standard.pm25_iaqi }} <i class=""></i></span>
             <span class="pjadt_pm10">{{ gzepb_lastest_data_usa_standard.pm10_iaqi }} <i class=""></i></span>
@@ -568,17 +668,22 @@
             <span class="pjadt_co">{{ gzepb_lastest_data_usa_standard.co_iaqi }} <i class=""></i></span>
             <span class="pjadt_o3">{{ gzepb_lastest_data_usa_standard.o3_iaqi_8h }} <i class=""></i></span>
             <div class="clear"></div>
-          {% else %}
+        </li>                             
+      </ul>
+      {% else %}
+      <ul class="pj_area_data_details station">
+        <li class="pj_area_data_item pj_area_data_item_darkbg">
+          <b></b>
             <a class="pjadt_location" href="#" title="详细数据">无数据</a>
             <span class="pjadt_aqi">无<i class=""></i></span>
             <span class="pjadt_quality">无</span>
-            <a class="pjadt_wuranwu" href="/news/387.html" title="颗粒物(PM10)" target="_blank">无</a>
+            <span class="pjadt_wuranwu">无</span>
             <span class="pjadt_pm25">无<i class=""></i></span>
             <span class="pjadt_pm10">无<i class=""></i></span>
             <div class="clear"></div>
-          {% endif %}
         </li>                             
       </ul>
+      {% endif %}
     </div>
   {% endif %}
 {% endblock %}
