--- a/mainapp/templates/mainapp/station_base.html
+++ b/mainapp/templates/mainapp/station_base.html
@@ -38,7 +38,7 @@
   <div class="topnav_width">
       <div class="topnav">
           <div class="topnav_right">
-              <a class="topnav_map" href="/map.html">进入地图模式&gt;&gt;</a>
+              <a class="topnav_map" href="#">进入地图模式&gt;&gt;</a>
           </div>
       </div>
   </div>
