--- a/mainapp/templates/mainapp/station.html
+++ b/mainapp/templates/mainapp/station.html
@@ -49,34 +49,34 @@
             <!-- AQI值 -->
             <div class="cbol_aqi">
               {% if gzepb_lastest_data.aqi %}
-                <a class="cbol_aqi_num" href="/news/385.html" target="_blank">{{ gzepb_lastest_data.aqi|add:0 }}</a>
+                <a class="cbol_aqi_num" href="#">{{ gzepb_lastest_data.aqi|add:0 }}</a>
               {% else %}
                 <p class="cbol_aqi_num cbol_aqi_nodata"><i></i></p>
               {% endif %}
-              <a class="cbol_aqi_name" href="/news/385.html" target="_blank">AQI指数</a>
+              <a class="cbol_aqi_name" href="http://baike.baidu.com/link?url=fQGyWSkZbsArgXKKdtDvxhoAqLYuX7FofaSgQzGwCEBWDoU3nC5WAKD4WipS7sEuM1711D-1SmJjWaL7xm42mFDsKo71toZxcPMqgDWREGDLHVsct49KMJo6tAyaK9__nqStE2j0-3hNDMhXGdImka" target="_blank">AQI指数</a>
             </div>
             <!-- 首要污染物 -->
             <div class="cbol_wuranwu">
               {% if gzepb_lastest_data.dominentpol %}
-                <a class="cbol_wuranwu_num " href="/news/387.html" target="_blank">{{ gzepb_lastest_data.dominentpol }}</a>
+                <a class="cbol_wuranwu_num " href="#">{{ gzepb_lastest_data.dominentpol }}</a>
               {% else %}
-                <a class="cbol_wuranwu_num cbol_wuranwu_nodata" href="/news/387.html" target="_blank"><i></i></a>
+                <a class="cbol_wuranwu_num cbol_wuranwu_nodata" href="#"><i></i></a>
               {% endif %}
-              <a class="cbol_wuranwu_name" href="/news/387.html" target="_blank">首要污染物</a>
+              <a class="cbol_wuranwu_name" href="http://baike.baidu.com/link?url=fQGyWSkZbsArgXKKdtDvxhoAqLYuX7FofaSgQzGwCEBWDoU3nC5WAKD4WipS7sEuM1711D-1SmJjWaL7xm42mFDsKo71toZxcPMqgDWREGDLHVsct49KMJo6tAyaK9__nqStE2j0-3hNDMhXGdImka" target="_blank">首要污染物</a>
             </div>
             <!-- PM2.5浓度/IAQI值 -->
             <div class="cbol_nongdu">
               {% if gzepb_lastest_data.pm25_1h %}
-                <a class="cbol_nongdu_num " href="/news/386.html" target="_blank">
+                <a class="cbol_nongdu_num " href="#">
                   <span class="cbol_nongdu_num_1">{{ gzepb_lastest_data.pm25_1h|add:0 }}</span>
                   <span class="cbol_nongdu_num_2">微克/立方米</span>
                 </a>
-                <a class="cbol_nongdu_name" href="/news/386.html" target="_blank">PM2.5浓度</a>
+                <a class="cbol_nongdu_name" href="#">PM2.5浓度</a>
               {% else %}
-                <a class="cbol_nongdu_num cbol_nongdu_nodata" href="/news/386.html" target="_blank">
+                <a class="cbol_nongdu_num cbol_nongdu_nodata" href="#">
                   <i></i>
                 </a>
-                <a class="cbol_nongdu_name" href="/news/386.html" target="_blank">PM2.5浓度</a>
+                <a class="cbol_nongdu_name" href="#">PM2.5浓度</a>
               {% endif %}
             </div>
           <!-- 左边 -->
@@ -160,33 +160,33 @@
             <!-- AQI值 -->
             <div class="cbol_aqi">
               {% if aqicn_lastest_data.aqi %}
-                <a class="cbol_aqi_num" href="/news/385.html" target="_blank">{{ aqicn_lastest_data.aqi|add:0 }}</a>
+                <a class="cbol_aqi_num" href="#">{{ aqicn_lastest_data.aqi|add:0 }}</a>
               {% else %}
                 <p class="cbol_aqi_num cbol_aqi_nodata"><i></i></p>
               {% endif %}
-              <a class="cbol_aqi_name" href="/news/385.html" target="_blank">AQI指数</a>
+              <a class="cbol_aqi_name" href="http://baike.baidu.com/link?url=bsnHcrKxVqxXcc2e96wkh8KvcdAhD9JZDcev70IP24QTzFXv7QKeO0Nue_KMnLqw5FpdWcuZ3Yx96XPR6VQ8W5BnyAxBj7Gaq4VywnYqqLFQqWtcDydHmBLR2b4FlLgZSIa7Z3zYXKL8aXYGgSTtWK" target="_blank">AQI指数</a>
             </div>
             <!-- 首要污染物 -->
             <div class="cbol_wuranwu">
               {% if aqicn_lastest_data.dominentpol %}
-                <a class="cbol_wuranwu_num " href="/news/387.html" target="_blank">{{ aqicn_lastest_data.dominentpol|upper }}</a>
+                <a class="cbol_wuranwu_num " href="#">{{ aqicn_lastest_data.dominentpol|upper }}</a>
               {% else %}
-                <a class="cbol_wuranwu_num cbol_wuranwu_nodata" href="/news/387.html" target="_blank"><i></i></a>
+                <a class="cbol_wuranwu_num cbol_wuranwu_nodata" href="#"><i></i></a>
               {% endif %}
-              <a class="cbol_wuranwu_name" href="/news/387.html" target="_blank">首要污染物</a>
+              <a class="cbol_wuranwu_name" href="http://baike.baidu.com/link?url=bsnHcrKxVqxXcc2e96wkh8KvcdAhD9JZDcev70IP24QTzFXv7QKeO0Nue_KMnLqw5FpdWcuZ3Yx96XPR6VQ8W5BnyAxBj7Gaq4VywnYqqLFQqWtcDydHmBLR2b4FlLgZSIa7Z3zYXKL8aXYGgSTtWK" target="_blank">首要污染物</a>
             </div>
             <!-- PM2.5浓度/IAQI值 -->
             <div class="cbol_nongdu">
               {% if aqicn_lastest_data.pm25_iaqi %}
-                <a class="cbol_nongdu_num " href="/news/386.html" target="_blank">
+                <a class="cbol_nongdu_num " href="#">
                   <span class="cbol_nongdu_num_iaqi">{{ aqicn_lastest_data.pm25_iaqi|add:0 }}</span>
                 </a>
-                <a class="cbol_nongdu_name" href="/news/386.html" target="_blank">PM2.5 IAQI</a>
+                <a class="cbol_nongdu_name" href="#">PM2.5 IAQI</a>
               {% else %}
-                <a class="cbol_nongdu_num cbol_nongdu_nodata" href="/news/386.html" target="_blank">
+                <a class="cbol_nongdu_num cbol_nongdu_nodata" href="#">
                   <i></i>
                 </a>
-                <a class="cbol_nongdu_name" href="/news/386.html" target="_blank">PM2.5 IAQI</a>
+                <a class="cbol_nongdu_name" href="#">PM2.5 IAQI</a>
               {% endif %} 
             </div>
           <!-- 左边 -->
@@ -301,74 +301,74 @@
             <div class="cbol_aqi">
               {% if gzepb_lastest_data %}
                 {% if gzepb_lastest_data.aqi %}
-                  <a class="cbol_aqi_num" href="/news/385.html" target="_blank">{{ gzepb_lastest_data.aqi|add:0 }}</a>
+                <a class="cbol_aqi_num" href="#">{{ gzepb_lastest_data.aqi|add:0 }}</a>
                 {% else %}
                  <i></i>  
                 {% endif %}
               {% elif aqicn_lastest_data %}
                 {% if aqicn_lastest_data.aqi %}
-                  <a class="cbol_aqi_num" href="/news/385.html" target="_blank">{{ aqicn_lastest_data.aqi|add:0 }}</a>
+                  <a class="cbol_aqi_num" href="#">{{ aqicn_lastest_data.aqi|add:0 }}</a>
                 {% else %}
                  <i></i>  
                 {% endif %}
               {% else %}
                 <p class="cbol_aqi_num cbol_aqi_nodata"><i></i></p>
               {% endif %}
-              <a class="cbol_aqi_name" href="/news/385.html" target="_blank">AQI指数</a>
+              <a class="cbol_aqi_name" href="http://baike.baidu.com/link?url=bsnHcrKxVqxXcc2e96wkh8KvcdAhD9JZDcev70IP24QTzFXv7QKeO0Nue_KMnLqw5FpdWcuZ3Yx96XPR6VQ8W5BnyAxBj7Gaq4VywnYqqLFQqWtcDydHmBLR2b4FlLgZSIa7Z3zYXKL8aXYGgSTtWK" target="_blank">AQI指数</a>
             </div>
 
             <!-- 首要污染物 -->
             <div class="cbol_wuranwu">
               {% if gzepb_lastest_data %}
                 {% if gzepb_lastest_data.dominentpol %}
-                  <a class="cbol_wuranwu_num " href="/news/387.html" target="_blank">{{ gzepb_lastest_data.dominentpol }}</a>
+                  <a class="cbol_wuranwu_num " href="#">{{ gzepb_lastest_data.dominentpol }}</a>
                 {% else %}
-                  <a class="cbol_wuranwu_num cbol_wuranwu_nodata" href="/news/387.html" target="_blank"><i></i></a>
+                  <a class="cbol_wuranwu_num cbol_wuranwu_nodata" href="#"><i></i></a>
                 {% endif %}
               {% elif aqicn_lastest_data %}
                 {% if aqicn_lastest_data.dominentpol %}
-                  <a class="cbol_wuranwu_num " href="/news/387.html" target="_blank">{{ aqicn_lastest_data.dominentpol|upper }}</a>
+                  <a class="cbol_wuranwu_num " href="#">{{ aqicn_lastest_data.dominentpol|upper }}</a>
                 {% else %}
-                  <a class="cbol_wuranwu_num cbol_wuranwu_nodata" href="/news/387.html" target="_blank"><i></i></a>
+                  <a class="cbol_wuranwu_num cbol_wuranwu_nodata" href="#"><i></i></a>
                 {% endif %}
               {% else %}
-                <a class="cbol_wuranwu_num cbol_wuranwu_nodata" href="/news/387.html" target="_blank"><i></i></a>
+                <a class="cbol_wuranwu_num cbol_wuranwu_nodata" href="#"><i></i></a>
               {% endif %}
-              <a class="cbol_wuranwu_name" href="/news/387.html" target="_blank">首要污染物</a>
+              <a class="cbol_wuranwu_name" href="http://baike.baidu.com/link?url=bsnHcrKxVqxXcc2e96wkh8KvcdAhD9JZDcev70IP24QTzFXv7QKeO0Nue_KMnLqw5FpdWcuZ3Yx96XPR6VQ8W5BnyAxBj7Gaq4VywnYqqLFQqWtcDydHmBLR2b4FlLgZSIa7Z3zYXKL8aXYGgSTtWK" target="_blank">首要污染物</a>
             </div>
 
             <!-- PM2.5浓度/IAQI值 -->
             <div class="cbol_nongdu">
               {% if gzepb_lastest_data %}
                 {% if gzepb_lastest_data.pm25_1h %}
-                  <a class="cbol_nongdu_num " href="/news/386.html" target="_blank">
+                  <a class="cbol_nongdu_num " href="#">
                     <span class="cbol_nongdu_num_1">{{ gzepb_lastest_data.pm25_1h|add:0 }}</span>
                     <span class="cbol_nongdu_num_2">微克/立方米</span>
                   </a>
-                  <a class="cbol_nongdu_name" href="/news/386.html" target="_blank">PM2.5浓度</a>
+                  <a class="cbol_nongdu_name" href="#">PM2.5浓度</a>
                 {% else %}
-                  <a class="cbol_nongdu_num cbol_nongdu_nodata" href="/news/386.html" target="_blank">
+                  <a class="cbol_nongdu_num cbol_nongdu_nodata" href="#">
                     <i></i>
                   </a>
-                  <a class="cbol_nongdu_name" href="/news/386.html" target="_blank">PM2.5浓度</a>
+                  <a class="cbol_nongdu_name" href="#">PM2.5浓度</a>
                 {% endif %}
               {% elif aqicn_lastest_data %}
                 {% if aqicn_lastest_data.pm25_iaqi %}
-                  <a class="cbol_nongdu_num " href="/news/386.html" target="_blank">
+                  <a class="cbol_nongdu_num " href="#">
                     <span class="cbol_nongdu_num_iaqi">{{ aqicn_lastest_data.pm25_iaqi|add:0 }}</span>
                   </a>
-                  <a class="cbol_nongdu_name" href="/news/386.html" target="_blank">PM2.5 IAQI</a>
+                  <a class="cbol_nongdu_name" href="#">PM2.5 IAQI</a>
                 {% else %}
-                  <a class="cbol_nongdu_num cbol_nongdu_nodata" href="/news/386.html" target="_blank">
+                  <a class="cbol_nongdu_num cbol_nongdu_nodata" href="#">
                     <i></i>
                   </a>
-                  <a class="cbol_nongdu_name" href="/news/386.html" target="_blank">PM2.5 IAQI</a>
+                  <a class="cbol_nongdu_name" href="#">PM2.5 IAQI</a>
                 {% endif %} 
               {% else %}
-                  <a class="cbol_nongdu_num cbol_nongdu_nodata" href="/news/386.html" target="_blank">
+                  <a class="cbol_nongdu_num cbol_nongdu_nodata" href="#">
                     <i></i>
                   </a>
-                  <a class="cbol_nongdu_name" href="/news/386.html" target="_blank">PM2.5浓度</a>
+                  <a class="cbol_nongdu_name" href="#">PM2.5浓度</a>
               {% endif %}
             </div>
           </div>
